--- a/notebooks/TFIDF.ipynb
+++ b/notebooks/TFIDF.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "# import seaborn as sns\n",
     "import os\n",
     "\n",
     "import re\n",
